--- a/notebooks/model-development.ipynb
+++ b/notebooks/model-development.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/juanherrera/Desktop/causal-attribution-analysis/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -29,16 +20,17 @@
     "\n",
     "import statsmodels.formula.api as smf # type: ignore\n",
     "import statsmodels.api # type: ignore\n",
+    "from statsmodels.miscmodels.ordinal_model import OrderedModel # type: ignore\n",
     "\n",
     "from dowhy import CausalModel # type: ignore\n",
     "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.linear_model import LogisticRegression # type: ignore\n",
+    "from sklearn.neighbors import NearestNeighbors # type: ignore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -258,9 +250,9 @@
       "Estimand name: backdoor\n",
       "Estimand expression:\n",
       "         d                                                                  \n",
-      "───────────────────(E[Rating|season,freight_value,Product_category_encoded])\n",
+      "───────────────────(E[Rating|Product_category_encoded,season,freight_value])\n",
       "d[is_delivery_late]                                                         \n",
-      "Estimand assumption 1, Unconfoundedness: If U→{is_delivery_late} and U→Rating then P(Rating|is_delivery_late,season,freight_value,Product_category_encoded,U) = P(Rating|is_delivery_late,season,freight_value,Product_category_encoded)\n",
+      "Estimand assumption 1, Unconfoundedness: If U→{is_delivery_late} and U→Rating then P(Rating|is_delivery_late,Product_category_encoded,season,freight_value,U) = P(Rating|is_delivery_late,Product_category_encoded,season,freight_value)\n",
       "\n",
       "### Estimand : 2\n",
       "Estimand name: iv\n",
@@ -276,6 +268,94 @@
    "source": [
     "identified_estimand = causal_model.identify_causal_effect(model=model)\n",
     "print(identified_estimand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Rating   R-squared:                       0.103\n",
+      "Model:                            OLS   Adj. R-squared:                  0.103\n",
+      "Method:                 Least Squares   F-statistic:                 1.365e+04\n",
+      "Date:                Mon, 30 Sep 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        22:21:32   Log-Likelihood:            -2.0222e+05\n",
+      "No. Observations:              119143   AIC:                         4.044e+05\n",
+      "Df Residuals:                  119141   BIC:                         4.045e+05\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "====================================================================================\n",
+      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "Intercept            4.1319      0.004   1044.872      0.000       4.124       4.140\n",
+      "is_delivery_late    -1.8340      0.016   -116.818      0.000      -1.865      -1.803\n",
+      "==============================================================================\n",
+      "Omnibus:                    19945.105   Durbin-Watson:                   1.441\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            31494.256\n",
+      "Skew:                          -1.223   Prob(JB):                         0.00\n",
+      "Kurtosis:                       3.604   Cond. No.                         4.12\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = smf.ols(formula='Rating ~ is_delivery_late', data=df)\n",
+    "results = model.fit()\n",
+    "print(results.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 1.228526\n",
+      "         Iterations: 28\n",
+      "         Function evaluations: 31\n",
+      "         Gradient evaluations: 31\n",
+      "                             OrderedModel Results                             \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Rating   Log-Likelihood:            -1.4637e+05\n",
+      "Model:                   OrderedModel   AIC:                         2.928e+05\n",
+      "Method:            Maximum Likelihood   BIC:                         2.928e+05\n",
+      "Date:                Mon, 30 Sep 2024                                         \n",
+      "Time:                        22:29:10                                         \n",
+      "No. Observations:              119143                                         \n",
+      "Df Residuals:                  119137                                         \n",
+      "Df Model:                           1                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "is_delivery_late         -2.2249      0.023    -95.579      0.000      -2.271      -2.179\n",
+      "1.0/2.0                  -2.1543      0.009   -226.997      0.000      -2.173      -2.136\n",
+      "2.0/3.0                  -1.1726      0.015    -76.842      0.000      -1.202      -1.143\n",
+      "3.0/4.0                  -0.5732      0.010    -58.807      0.000      -0.592      -0.554\n",
+      "4.0/4.015582414978078    -0.1012      0.006    -16.226      0.000      -0.113      -0.089\n",
+      "4.015582414978078/5.0    -3.3387      0.032   -105.872      0.000      -3.400      -3.277\n",
+      "=========================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = OrderedModel(df['Rating'], df['is_delivery_late'], distr='logit')\n",
+    "results = model.fit(method='bfgs')\n",
+    "\n",
+    "# Print the summary of the results\n",
+    "print(results.summary())"
    ]
   },
   {
