--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,13 @@
     "from src.data.make_dataset import load_data, merge_all_datasets\n",
     "from src.data.preprocess import preprocessing\n",
     "\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)"
+    "# pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.max_rows', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,21 +112,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9245/1841060352.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  final_df.rename(columns={\n"
+     ]
+    }
+   ],
    "source": [
-    "# final_df.rename(columns={\n",
-    "#     'seasonality': 'season',\n",
-    "#     'review_score': 'Rating',\n",
-    "#     'rainfall': 'region'\n",
+    "final_df.rename(columns={\n",
+    "    'seasonality': 'season',\n",
+    "    'review_score': 'Rating',\n",
+    "    'rainfall': 'region'\n",
     "    \n",
-    "# }, inplace=True)"
+    "}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,39 +155,325 @@
     "               'season', \n",
     "               'is_delivery_late',\n",
     "               'Product_price',\n",
-    "               'freight_value']]"
+    "               'freight_value',\n",
+    "               'Product_category_encoded']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/7s/18428v6x0c9g1ltv9g71gm1h0000gn/T/ipykernel_44357/2538155937.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_final['Product_category_encoded'] = le.fit_transform(df_final['Product_category'])\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>payment_value</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>region</th>\n",
+       "      <th>Product_weight_kg</th>\n",
+       "      <th>distance_km</th>\n",
+       "      <th>Product_category</th>\n",
+       "      <th>Product_size</th>\n",
+       "      <th>No_photos</th>\n",
+       "      <th>Product_price</th>\n",
+       "      <th>season</th>\n",
+       "      <th>is_delivery_late</th>\n",
+       "      <th>Product_price</th>\n",
+       "      <th>freight_value</th>\n",
+       "      <th>Product_category_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d455a8cb295653b55abda06d434ab492</td>\n",
+       "      <td>916.02</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>South</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>687.434185</td>\n",
+       "      <td>eletroportateis</td>\n",
+       "      <td>61920.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7f39ba4c9052be115350065d07583cac</td>\n",
+       "      <td>916.02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>417.139650</td>\n",
+       "      <td>eletroportateis</td>\n",
+       "      <td>61920.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9dc8d1a6f16f1b89874c29c9d8d30447</td>\n",
+       "      <td>916.02</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>714.295670</td>\n",
+       "      <td>eletroportateis</td>\n",
+       "      <td>61920.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>895.0</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0f548bd29148ebc519d6495e37a284e1</td>\n",
+       "      <td>264.16</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>389.663761</td>\n",
+       "      <td>ferramentas_jardim</td>\n",
+       "      <td>19656.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>33.08</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0f548bd29148ebc519d6495e37a284e1</td>\n",
+       "      <td>264.16</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>389.663761</td>\n",
+       "      <td>ferramentas_jardim</td>\n",
+       "      <td>19656.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>33.08</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119138</th>\n",
+       "      <td>87ae60ef8b08ae0e5f903cacb53a6904</td>\n",
+       "      <td>258.67</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119139</th>\n",
+       "      <td>d69fcef5a5fe3a3db60ea65c6ee499cc</td>\n",
+       "      <td>69.38</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119140</th>\n",
+       "      <td>f86d7bc39aab05299691322044b63bb2</td>\n",
+       "      <td>1302.42</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>North</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119141</th>\n",
+       "      <td>74f833bf7c70ce8c3f820f725c213e1c</td>\n",
+       "      <td>101.56</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119142</th>\n",
+       "      <td>2e935fa1d39497aa0ec3f1107fbfb5b8</td>\n",
+       "      <td>18.37</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119143 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                order_id  payment_value  Rating     region  \\\n",
+       "0       d455a8cb295653b55abda06d434ab492         916.02     5.0      South   \n",
+       "1       7f39ba4c9052be115350065d07583cac         916.02     1.0  Southeast   \n",
+       "2       9dc8d1a6f16f1b89874c29c9d8d30447         916.02     5.0  Southeast   \n",
+       "3       0f548bd29148ebc519d6495e37a284e1         264.16     5.0  Southeast   \n",
+       "4       0f548bd29148ebc519d6495e37a284e1         264.16     5.0  Southeast   \n",
+       "...                                  ...            ...     ...        ...   \n",
+       "119138  87ae60ef8b08ae0e5f903cacb53a6904         258.67     1.0  Southeast   \n",
+       "119139  d69fcef5a5fe3a3db60ea65c6ee499cc          69.38     4.0  Northeast   \n",
+       "119140  f86d7bc39aab05299691322044b63bb2        1302.42     2.0      North   \n",
+       "119141  74f833bf7c70ce8c3f820f725c213e1c         101.56     1.0  Northeast   \n",
+       "119142  2e935fa1d39497aa0ec3f1107fbfb5b8          18.37     5.0  Southeast   \n",
+       "\n",
+       "        Product_weight_kg  distance_km    Product_category  Product_size  \\\n",
+       "0                    11.8   687.434185     eletroportateis       61920.0   \n",
+       "1                    11.8   417.139650     eletroportateis       61920.0   \n",
+       "2                    11.8   714.295670     eletroportateis       61920.0   \n",
+       "3                     9.0   389.663761  ferramentas_jardim       19656.0   \n",
+       "4                     9.0   389.663761  ferramentas_jardim       19656.0   \n",
+       "...                   ...          ...                 ...           ...   \n",
+       "119138                NaN          NaN                 NaN           NaN   \n",
+       "119139                NaN          NaN                 NaN           NaN   \n",
+       "119140                NaN          NaN                 NaN           NaN   \n",
+       "119141                NaN          NaN                 NaN           NaN   \n",
+       "119142                NaN          NaN                 NaN           NaN   \n",
+       "\n",
+       "        No_photos  Product_price  season  is_delivery_late  Product_price  \\\n",
+       "0             2.0          895.0       9                 0          895.0   \n",
+       "1             2.0          895.0      10                 0          895.0   \n",
+       "2             2.0          895.0      10                 0          895.0   \n",
+       "3             1.0           99.0       9                 0           99.0   \n",
+       "4             1.0           99.0       9                 0           99.0   \n",
+       "...           ...            ...     ...               ...            ...   \n",
+       "119138        NaN            NaN       9                 0            NaN   \n",
+       "119139        NaN            NaN      12                 0            NaN   \n",
+       "119140        NaN            NaN       8                 0            NaN   \n",
+       "119141        NaN            NaN       6                 0            NaN   \n",
+       "119142        NaN            NaN       9                 0            NaN   \n",
+       "\n",
+       "        freight_value  Product_category_encoded  \n",
+       "0               21.02                        31  \n",
+       "1               21.02                        31  \n",
+       "2               21.02                        31  \n",
+       "3               33.08                        40  \n",
+       "4               33.08                        40  \n",
+       "...               ...                       ...  \n",
+       "119138            NaN                        73  \n",
+       "119139            NaN                        73  \n",
+       "119140            NaN                        73  \n",
+       "119141            NaN                        73  \n",
+       "119142            NaN                        73  \n",
+       "\n",
+       "[119143 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "le  = LabelEncoder()\n",
-    "\n",
-    "\n",
-    "df_final['Product_category_encoded'] = le.fit_transform(df_final['Product_category']) \n"
+    "df_final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,11 +485,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# customer_previous_score: better name would be customer_avg_score?\n",
-    "# There should be no capital letters on column names; convention\n",
-    "# let's make sure variable names are easy to understand; not sure what \"rainfall\" would mean if I had not contenxt"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -210,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
