--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['order_id', 'customer_id', 'order_status', 'order_purchase_timestamp',\n",
+       "       'order_approved_at', 'order_delivered_carrier_date',\n",
+       "       'order_delivered_customer_date', 'order_estimated_delivery_date',\n",
+       "       'order_item_id', 'product_id', 'seller_id', 'shipping_limit_date',\n",
+       "       'price', 'freight_value', 'payment_sequential', 'payment_type',\n",
+       "       'payment_installments', 'payment_value', 'review_id', 'review_score',\n",
+       "       'review_comment_title', 'review_comment_message',\n",
+       "       'review_creation_date', 'review_answer_timestamp',\n",
+       "       'product_category_name', 'product_name_lenght',\n",
+       "       'product_description_lenght', 'product_photos_qty', 'product_weight_g',\n",
+       "       'product_length_cm', 'product_height_cm', 'product_width_cm',\n",
+       "       'customer_unique_id', 'customer_zip_code_prefix', 'customer_city',\n",
+       "       'customer_state', 'seller_zip_code_prefix', 'seller_city',\n",
+       "       'seller_state', 'geolocation_zip_code_prefix_x', 'geolocation_lat_x',\n",
+       "       'geolocation_lng_x', 'geolocation_city_x', 'geolocation_state_x',\n",
+       "       'geolocation_zip_code_prefix_y', 'geolocation_lat_y',\n",
+       "       'geolocation_lng_y', 'geolocation_city_y', 'geolocation_state_y'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7s/18428v6x0c9g1ltv9g71gm1h0000gn/T/ipykernel_90150/1700426426.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/7s/18428v6x0c9g1ltv9g71gm1h0000gn/T/ipykernel_18551/1700426426.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -116,11 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = final_df[['order_id', \n",
+    "df_final = final_df[['order_id',\n",
+    "                'customer_id',\n",
+    "                'customer_unique_id', \n",
     "               'payment_value', \n",
     "               'Rating',\n",
     "               'region', \n",
@@ -141,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
