--- a/notebooks/prelim-analysis.ipynb
+++ b/notebooks/prelim-analysis.ipynb
@@ -460,15 +460,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rating or Review score is an ordinal variable (varies from 1-5). We try to run an ordinal logistic regression in order to account for the ordering of the ratings and the fact that the difference between them cannot be treated as mathematical. "
+    "Rating or Review score is an ordinal variable (varies from 1-5). We try to run an ordinal logistic regression in order to account for the ordering of the ratings and the fact that the difference between them cannot be treated as mathematical. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Simple Linear Regression </h3>"
+    "<h3> Simple Linear Regression </h3>\n",
+    "\n",
+    "For benchmarking purposes, we start with a simple linear regression"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -635,8 +642,14 @@
    "metadata": {},
    "source": [
     "The R-squared is 10.5% and the coefficient of is_delivery_late is -1.87 which means that ratings go down by 1.87 stars if a particular order is late. <br>\n",
+    "\n",
     "This is by no means an accurate measure of the effect because it operates under the assumption that 'Rating' is a numerical variable. Additionally, it does not account for any confounding factors. This approach however, is used to benchmark the impact of our independent variable on our dependent variable. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -724,29 +737,6 @@
    ],
    "source": [
     "df['season'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Convert categorical columns (example)\n",
-    "# df['Product_category'] = df['Product_category'].astype('category')\n",
-    "# df['is_delivery_late'] = df['is_delivery_late'].astype('category')\n",
-    "# df['season'] = df['season'].astype('category')\n",
-    "# df['Rating'] = df['Rating'].astype('category')\n",
-    "# \n",
-    "# \n",
-    "# \n",
-    "# df_clean = df.dropna(subset=['Rating'])  # Drop rows with missing 'Rating'\n",
-    "X = df_clean[['Product_category', 'season', 'Product_size', 'is_delivery_late']]\n",
-    "y = df_clean['Rating'] \n",
-    "\n",
-    "model = OrderedModel(y, X, distr='logit')  # 'logit' indicates a logistic link function\n",
-    "result = model.fit(method='bfgs')\n",
-    "print(result.summary())"
    ]
   },
   {
